--- a/.eslintrc
+++ b/.eslintrc
@@ -7,7 +7,7 @@
 		"ecmaVersion": 2018,
 		"sourceType": "module",
 		"parser": "@typescript-eslint/parser",
-		"project": "./api/tsconfig.json"
+		"project": "./tsconfig.json"
 	},
 	"extends": [
 		"eslint:recommended",
