--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "main": "src/index.ts",
     "author": "weclapp",
     "scripts": {
-        "gen:start": "ts-node src/index.ts --project tsconfig.json",
-        "gen:dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-        "lint": "eslint src/**/*.ts",
-        "lint:fix": "npm run lint -- --fix"
+        "gen:start": "ts-node -r tsconfig-paths/register src/index.ts --project tsconfig.json",
+        "gen:dev": "ts-node-dev --respawn --transpile-only -r tsconfig-paths/register src/index.ts",
+        "lint:ts": "eslint src/**/*.ts",
+        "lint:fix": "npm run lint:ts -- --fix"
     },
     "repository": {
         "type": "git",
@@ -21,6 +21,12 @@
         "eslint": "^7.17.0",
         "ts-node": "^9.1.1",
         "ts-node-dev": "^1.1.1",
+        "tsconfig-paths": "^3.9.0"
+    },
+    "dependencies": {
+        "change-case": "^4.1.2",
+        "dotenv": "^8.2.0",
+        "indent-string": "^4.0.0",
         "typescript": "^4.1.3"
     }
 }
