--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,24 @@
 {
-	"compilerOptions": {
-		"strict": true,
-		"noImplicitAny": true,
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"experimentalDecorators": true,
-		"resolveJsonModule": true,
-		"moduleResolution": "node",
-		"module": "commonjs",
-		"target": "ES2020",
-		"sourceMap": false,
-		"allowSyntheticDefaultImports": true,
-		"outDir": "./dist"
-	},
-	"include": [
-		"src/**/*.ts"
-	]
+    "compilerOptions": {
+        "strict": true,
+        "noImplicitAny": true,
+        "esModuleInterop": true,
+        "skipLibCheck": true,
+        "experimentalDecorators": true,
+        "resolveJsonModule": true,
+        "moduleResolution": "node",
+        "module": "commonjs",
+        "target": "ES2020",
+        "sourceMap": false,
+        "allowSyntheticDefaultImports": true,
+        "outDir": "./dist",
+        "baseUrl": ".",
+        "paths": {
+            "@utils/*": ["src/utils/*"],
+            "@ts/*": ["src/ts/*"]
+        }
+    },
+    "include": [
+        "src/**/*.ts"
+    ]
 }
