--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "tsconfig-paths": "^3.9.0"
     },
     "dependencies": {
+        "chalk": "^4.1.0",
         "change-case": "^4.1.2",
         "dotenv": "^8.2.0",
         "indent-string": "^4.0.0",
