--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
         "outDir": "./dist",
         "baseUrl": ".",
         "paths": {
+            "@swagger/*": ["src/swagger/*"],
             "@utils/*": ["src/utils/*"],
             "@ts/*": ["src/ts/*"]
         }
