#2 Refactor for the openapi-v3 format

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,10 @@
 
-# Path to the swagger.json file
-SWAGGER_FILE=path/to/swagger.json
+# Path to the open-api v3 file
+# Specs: https://swagger.io/specification/
+SRC_OPENAPI=path/to/openapi.json
 
 # Raw sdk output directory
-SDK_DIST=./sdk
+DIST_SDK=./sdk
 
 # Indentation for generated code
 # Use numbers for spaces and 'tab' for tabs
