--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@typescript-eslint/eslint-plugin": "^4.11.1",
         "@typescript-eslint/parser": "^4.11.1",
         "eslint": "^7.17.0",
+        "openapi-types": "^7.2.2",
         "ts-node": "^9.1.1",
         "ts-node-dev": "^1.1.1",
         "tsconfig-paths": "^3.9.0"
