--- a/package.json
+++ b/package.json
@@ -2,11 +2,17 @@
     "name": "sdk-generator",
     "version": "1.0.0",
     "description": "SDK generated based on a weclapp api swagger file",
-    "main": "src/index.ts",
+    "main": "./lib/sdk.min.js",
+    "module": "./lib/sdk.min.mjs",
+    "types": "./lib/sdk.min.d.ts",
     "author": "weclapp",
     "scripts": {
         "gen:start": "ts-node -r tsconfig-paths/register src/index.ts --project tsconfig.json",
         "gen:dev": "ts-node-dev --respawn -r tsconfig-paths/register src/index.ts",
+        "sdk:build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
+        "sdk:build:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js --watch",
+        "sdk:lint": "tsc --noEmit",
+        "build": "npm run gen:start && npm run sdk:build",
         "lint:ts": "eslint src/**/*.ts",
         "lint:fix": "npm run lint:ts -- --fix"
     },
@@ -18,8 +24,12 @@
         "@types/node": "^14.14.19",
         "@typescript-eslint/eslint-plugin": "^4.11.1",
         "@typescript-eslint/parser": "^4.11.1",
+        "@wessberg/rollup-plugin-ts": "^1.3.8",
+        "cross-env": "^7.0.3",
         "eslint": "^7.17.0",
         "openapi-types": "^7.2.2",
+        "rollup": "^2.36.1",
+        "rollup-plugin-terser": "^7.0.2",
         "ts-node": "^9.1.1",
         "ts-node-dev": "^1.1.1",
         "tsconfig-paths": "^3.9.0"
