--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
         "gen:start": "ts-node -r tsconfig-paths/register src/index.ts --project tsconfig.json",
         "gen:dev": "ts-node-dev --respawn -r tsconfig-paths/register src/index.ts",
         "sdk:build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
-        "sdk:build:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js --watch",
-        "sdk:lint": "tsc --noEmit",
+        "sdk:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js --watch",
         "build": "npm run gen:start && npm run sdk:build",
         "lint:ts": "eslint src/**/*.ts",
         "lint:fix": "npm run lint:ts -- --fix"
