#6 Set up test suite

--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ SRC_OPENAPI=path/to/openapi.json
 # Raw sdk output directory
 DIST_SDK=./sdk
 
+# Test-system credentials. These are used to test the sdk.
+TEST_DOMAIN=
+TEST_API_KEY=
+
 # Indentation for generated code
 # Use numbers for spaces and 'tab' for tabs
 CODE_INDENTATION=4
