--- a/package.json
+++ b/package.json
@@ -13,22 +13,31 @@
         "sdk:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js --watch",
         "build": "npm run gen:start && npm run sdk:build",
         "lint:ts": "eslint src/**/*.ts",
-        "lint:fix": "npm run lint:ts -- --fix"
+        "lint:fix": "npm run lint:ts -- --fix",
+        "test": "jest",
+        "test:coverage": "jest --coverage",
+        "test:dev": "jest --watch"
     },
     "repository": {
         "type": "git",
         "url": "git@git.internal.weclapp.com:weclapp/weclapp-api/sdk-generator.git"
     },
     "devDependencies": {
+        "@types/jest": "^26.0.20",
         "@types/node": "^14.14.19",
+        "@types/node-fetch": "^2.5.7",
         "@typescript-eslint/eslint-plugin": "^4.11.1",
         "@typescript-eslint/parser": "^4.11.1",
         "@wessberg/rollup-plugin-ts": "^1.3.8",
         "cross-env": "^7.0.3",
         "eslint": "^7.17.0",
+        "jest": "^26.6.3",
+        "jest-extended": "^0.11.5",
+        "node-fetch": "^2.6.1",
         "openapi-types": "^7.2.2",
         "rollup": "^2.36.1",
         "rollup-plugin-terser": "^7.0.2",
+        "ts-jest": "^26.4.4",
         "ts-node": "^9.1.1",
         "ts-node-dev": "^1.1.1",
         "tsconfig-paths": "^3.9.0"
