#7 Add static files
Generate package.json on the fly

--- a/.env.example
+++ b/.env.example
@@ -3,8 +3,10 @@
 # Specs: https://swagger.io/specification/
 SRC_OPENAPI=path/to/openapi.json
 
-# Raw sdk output directory
-DIST_SDK=./sdk
+# Output directories
+SDK_VERSION=1.0.0
+SDK_REPOSITORY=sdk
+SDK_RAW_DIR=lib
 
 # Test-system credentials. These are used to test the sdk.
 TEST_DOMAIN=
