--- a/static/package.json
+++ b/static/package.json
@@ -2,9 +2,9 @@
     "name": "@weclapp/sdk",
     "version": "0.0.0",
     "description": "Weclapp SDK",
-    "main": "./lib/sdk.min.js",
-    "module": "./lib/sdk.min.mjs",
-    "types": "./lib/sdk.min.d.ts",
+    "main": "./lib/sdk.js",
+    "module": "./lib/sdk.mjs",
+    "types": "./lib/sdk.d.ts",
     "author": "weclapp",
     "scripts": {},
     "homepage": "https://github.com/weclapp/sdk#readme",
@@ -13,6 +13,7 @@
     "devDependencies": {},
     "dependencies": {},
     "peerDependencies": {
-        "typescript": "^4.1.3"
+        "typescript": "^4.1.3",
+        "node-fetch": "^2.6.1"
     }
 }
