#8 Add missing types for node in node bundle
Refactor module path management in sdk repo
Add .gitignore file to the generated repo

--- a/static/package.json
+++ b/static/package.json
@@ -2,9 +2,9 @@
     "name": "@weclapp/sdk",
     "version": "0.0.0",
     "description": "Weclapp SDK",
-    "main": "./lib/sdk.js",
-    "module": "./lib/sdk.mjs",
-    "types": "./lib/sdk.d.ts",
+    "main": "./main/index.js",
+    "module": "./main/index.mjs",
+    "types": "./main/index.d.ts",
     "author": "weclapp",
     "scripts": {},
     "homepage": "https://github.com/weclapp/sdk#readme",
