#9 Print warning in case an endpoint wasn't handled
Refactor project structure

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,7 @@
         "baseUrl": ".",
         "paths": {
             "@logger": ["src/logger.ts"],
-            "@openapi/*": ["src/openapi/*"],
+            "@generator/*": ["src/generator/*"],
             "@enums/*": ["src/enums/*"],
             "@utils/*": ["src/utils/*"],
             "@ts/*": ["src/ts/*"],
