--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ SRC_OPENAPI=path/to/openapi.json
 SDK_VERSION=1.0.0
 SDK_REPOSITORY=sdk
 SDK_RAW_DIR=lib
+SDK_TYPES=types
 
 # Test-system credentials. These are used to test the sdk.
 TEST_DOMAIN=
