--- a/package.json
+++ b/package.json
@@ -43,9 +43,11 @@
         "tsconfig-paths": "^3.9.0"
     },
     "dependencies": {
+        "@types/fs-extra": "^9.0.6",
         "chalk": "^4.1.0",
         "change-case": "^4.1.2",
         "dotenv": "^8.2.0",
+        "fs-extra": "^9.0.1",
         "indent-string": "^4.0.0",
         "typescript": "^4.1.3"
     }
