--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "eslint": "^7.17.0",
         "jest": "^26.6.3",
         "jest-extended": "^0.11.5",
+        "joi": "^17.3.0",
         "node-fetch": "^2.6.1",
         "openapi-types": "^7.2.2",
         "rollup": "^2.36.1",
