--- a/static/package.json
+++ b/static/package.json
@@ -14,6 +14,7 @@
     "dependencies": {},
     "peerDependencies": {
         "typescript": "^4.1.3",
-        "node-fetch": "^2.6.1"
+        "node-fetch": "^2.6.1",
+        "rxjs": "^6.6.3"
     }
 }
