--- a/package.json
+++ b/package.json
@@ -24,21 +24,22 @@
     },
     "devDependencies": {
         "@types/jest": "^26.0.20",
-        "@types/node": "^14.14.19",
-        "@types/node-fetch": "^2.5.7",
-        "@typescript-eslint/eslint-plugin": "^4.11.1",
-        "@typescript-eslint/parser": "^4.11.1",
+        "@types/node": "^14.14.22",
+        "@types/node-fetch": "^2.5.8",
+        "@typescript-eslint/eslint-plugin": "^4.14.0",
+        "@typescript-eslint/parser": "^4.14.0",
         "@wessberg/rollup-plugin-ts": "^1.3.8",
         "cross-env": "^7.0.3",
-        "eslint": "^7.17.0",
+        "eslint": "^7.18.0",
         "jest": "^26.6.3",
         "jest-extended": "^0.11.5",
         "joi": "^17.3.0",
         "node-fetch": "^2.6.1",
-        "openapi-types": "^7.2.2",
-        "rollup": "^2.36.1",
+        "openapi-types": "^7.2.3",
+        "rollup": "^2.37.1",
         "rollup-plugin-copy": "^3.3.0",
         "rollup-plugin-terser": "^7.0.2",
+        "rxjs": "^6.6.3",
         "ts-jest": "^26.4.4",
         "ts-node": "^9.1.1",
         "ts-node-dev": "^1.1.1",
@@ -49,7 +50,7 @@
         "chalk": "^4.1.0",
         "change-case": "^4.1.2",
         "dotenv": "^8.2.0",
-        "fs-extra": "^9.0.1",
+        "fs-extra": "^9.1.0",
         "indent-string": "^4.0.0",
         "typescript": "^4.1.3"
     }
