--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "sdk:build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
         "sdk:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js --watch",
         "build": "npm run gen:start && npm run sdk:build",
-        "lint:ts": "eslint src/**/*.ts",
+        "lint:ts": "eslint {src,tests}/**/*.ts",
         "lint:fix": "npm run lint:ts -- --fix",
         "test": "jest",
         "test:coverage": "jest --coverage",
