#23 Re-export all types
Remove type:module from package.json
Map module names in jest config
Simplify import paths in tests

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,8 @@
             "@enums/*": ["src/enums/*"],
             "@utils/*": ["src/utils/*"],
             "@ts/*": ["src/ts/*"],
-            "@/*": ["./*"]
+            "@/*": ["./*"],
+            "@sdk/*": ["sdk/*"]
         }
     },
     "include": [
