--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
         "lint:fix": "npm run lint:ts -- --fix",
         "test": "jest",
         "test:coverage": "jest --coverage",
-        "test:dev": "jest --watch"
+        "test:dev": "jest --watch",
+        "openapi": "swagger2openapi"
     },
     "repository": {
         "type": "git",
@@ -39,6 +40,7 @@
         "rollup-plugin-copy": "^3.3.0",
         "rollup-plugin-terser": "^7.0.2",
         "rxjs": "^6.6.3",
+        "swagger2openapi": "^7.0.5",
         "ts-jest": "^26.4.4",
         "ts-node": "^9.1.1",
         "ts-node-dev": "^1.1.1",
