--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
         "test": "jest",
         "test:coverage": "jest --coverage",
         "test:dev": "jest --watch",
-        "openapi": "swagger2openapi"
+        "import:swagger": "ts-node scripts/import-swagger.ts --project tsconfig.json"
     },
     "repository": {
         "type": "git",
@@ -24,35 +24,35 @@
     },
     "devDependencies": {
         "@types/jest": "^26.0.20",
-        "@types/node": "^14.14.22",
+        "@types/node": "^14.14.33",
         "@types/node-fetch": "^2.5.8",
-        "@typescript-eslint/eslint-plugin": "^4.14.0",
-        "@typescript-eslint/parser": "^4.14.0",
+        "@typescript-eslint/eslint-plugin": "^4.17.0",
+        "@typescript-eslint/parser": "^4.17.0",
         "@wessberg/rollup-plugin-ts": "^1.3.8",
         "cross-env": "^7.0.3",
-        "eslint": "^7.18.0",
+        "eslint": "^7.21.0",
         "jest": "^26.6.3",
         "jest-extended": "^0.11.5",
-        "joi": "^17.3.0",
+        "joi": "^17.4.0",
         "node-fetch": "^2.6.1",
         "openapi-types": "^7.2.3",
-        "rollup": "^2.37.1",
-        "rollup-plugin-copy": "^3.3.0",
+        "rollup": "^2.41.1",
+        "rollup-plugin-copy": "^3.4.0",
         "rollup-plugin-terser": "^7.0.2",
-        "rxjs": "^6.6.3",
+        "rxjs": "^6.6.6",
         "swagger2openapi": "^7.0.5",
-        "ts-jest": "^26.4.4",
+        "ts-jest": "^26.5.3",
         "ts-node": "^9.1.1",
-        "ts-node-dev": "^1.1.1",
+        "ts-node-dev": "^1.1.6",
         "tsconfig-paths": "^3.9.0"
     },
     "dependencies": {
-        "@types/fs-extra": "^9.0.6",
+        "@types/fs-extra": "^9.0.8",
         "chalk": "^4.1.0",
         "change-case": "^4.1.2",
         "dotenv": "^8.2.0",
         "fs-extra": "^9.1.0",
         "indent-string": "^4.0.0",
-        "typescript": "^4.1.3"
+        "typescript": "^4.2.3"
     }
 }
