--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,15 @@
 stages:
-  - build
+  - generate
   - test
+  - publish
 
-.npm:defaults:
+.base:
   tags:
     - small
   image: $CI_REGISTRY/weclapp_ops/base_images/node:latest-lts-alpine
+
+.npm:defaults:
+  extends: .base
   cache:
     key: node_modules_cache
     policy: pull
@@ -15,22 +19,11 @@ stages:
     - npm install --unsafe-perm --prefer-offline --no-audit
     - npm prune
 
-lint:
+generate:
   extends: .npm:defaults
-  stage: test
-  needs: ["build"]
-  script: npm run lint:ts
-
-test:
-  extends: .npm:defaults
-  stage: test
-  needs: ["build"]
-  script: npm run test
-
-build:
-  extends: .npm:defaults
-  stage: build
+  stage: generate
   artifacts:
+    expire_in: 4 weeks
     paths:
       - sdk
   variables:
@@ -41,3 +34,29 @@ build:
     npm run import:swagger
     npm run gen:start
     npm run sdk:build
+
+test:
+  extends: .npm:defaults
+  stage: test
+  dependencies: [ 'generate' ]
+  script: npm run test
+
+lint:
+  extends: .npm:defaults
+  stage: test
+  dependencies: [ 'generate' ]
+  script: npm run lint:ts
+
+publish:repository:
+  extends: .base
+  stage: publish
+  dependencies: [ 'generate' ]
+  script: |
+    git clone "https://$SDK_GIT_USER:$SDK_GIT_PASS@gitlab.internal.weclapp.com/weclapp/frontend/sdk.git" sdk-remote --depth 1
+    cp -r sdk/* sdk-remote
+    cd sdk-remote
+    git config user.email "noreply@weclapp.com"
+    git config user.name "$SDK_GIT_USER"
+    git add .
+    git commit -m "$CI_COMMIT_SHA"
+    git push "https://$SDK_GIT_USER:$SDK_GIT_PASS@gitlab.internal.weclapp.com/weclapp/frontend/sdk.git" master
