--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -24,9 +24,9 @@ generate:
       - sdk
   variables:
     SRC_OPENAPI: "./openapi.json"
-    SDK_VERSION: "1.0.0"
     SDK_REPOSITORY: "./sdk"
   script: |
+    export SDK_VERSION="0.0.0-$CI_COMMIT_SHA"
     npm run import:swagger
     npm run gen:start
     npm run sdk:build
