--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,6 @@
 {
     "compilerOptions": {
+        "declaration": true,
         "strict": true,
         "noImplicitAny": true,
         "esModuleInterop": true,
