--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
         "gen:dev": "ts-node-dev --respawn --watch static/**/* -r tsconfig-paths/register src/index.ts",
         "sdk:build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
         "sdk:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js --watch",
-        "build": "npm run gen:start && npm run sdk:build",
-        "lint:ts": "eslint {src,tests}/**/*.ts",
+        "start": "npm run gen:start && npm run sdk:build",
+        "lint": "eslint {src,tests}/**/*.ts",
         "lint:fix": "npm run lint:ts -- --fix",
         "test": "jest",
         "test:coverage": "jest --coverage",
