--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
         "sdk:dev": "cross-env NODE_ENV=development rollup -c rollup.config.js --watch",
         "start": "npm run gen:start && npm run sdk:build",
         "lint": "eslint {src,tests}/**/*.ts",
-        "lint:fix": "npm run lint:ts -- --fix",
+        "lint:fix": "npm run lint -- --fix",
         "test": "jest",
         "test:coverage": "jest --coverage",
         "test:dev": "jest --watch",
