--- a/package.json
+++ b/package.json
@@ -23,36 +23,36 @@
         "url": "git@git.internal.weclapp.com:weclapp/weclapp-api/sdk-generator.git"
     },
     "devDependencies": {
-        "@types/jest": "^26.0.22",
-        "@types/node": "^14.14.36",
-        "@types/node-fetch": "^2.5.8",
-        "@typescript-eslint/eslint-plugin": "^4.19.0",
-        "@typescript-eslint/parser": "^4.19.0",
-        "@wessberg/rollup-plugin-ts": "^1.3.11",
+        "@types/jest": "^26.0.23",
+        "@types/node": "^15.12.2",
+        "@types/node-fetch": "^2.5.10",
+        "@typescript-eslint/eslint-plugin": "^4.26.1",
+        "@typescript-eslint/parser": "^4.26.1",
+        "rollup-plugin-ts": "^1.4.0",
         "cross-env": "^7.0.3",
-        "eslint": "^7.22.0",
-        "jest": "^26.6.3",
+        "eslint": "^7.28.0",
+        "jest": "^27.0.4",
         "jest-extended": "^0.11.5",
         "joi": "^17.4.0",
         "node-fetch": "^2.6.1",
-        "openapi-types": "^7.2.3",
-        "rollup": "^2.42.4",
+        "openapi-types": "^9.0.3",
+        "rollup": "^2.51.2",
         "rollup-plugin-copy": "^3.4.0",
         "rollup-plugin-terser": "^7.0.2",
-        "rxjs": "^6.6.6",
-        "swagger2openapi": "^7.0.5",
-        "ts-jest": "^26.5.4",
-        "ts-node": "^9.1.1",
+        "rxjs": "^6.6.7",
+        "swagger2openapi": "^7.0.6",
+        "ts-jest": "^27.0.3",
+        "ts-node": "^10.0.0",
         "ts-node-dev": "^1.1.6",
         "tsconfig-paths": "^3.9.0"
     },
     "dependencies": {
-        "@types/fs-extra": "^9.0.9",
-        "chalk": "^4.1.0",
+        "@types/fs-extra": "^9.0.11",
+        "chalk": "^4.1.1",
         "change-case": "^4.1.2",
-        "dotenv": "^8.2.0",
-        "fs-extra": "^9.1.0",
+        "dotenv": "^10.0.0",
+        "fs-extra": "^10.0.0",
         "indent-string": "^4.0.0",
-        "typescript": "^4.2.3"
+        "typescript": "^4.3.2"
     }
 }
