#42 Change all files to lf linebreak-style, add eslint rule to check for it

--- a/.eslintrc
+++ b/.eslintrc
@@ -19,6 +19,7 @@
     ],
     "rules": {
         "no-console": "error",
-        "comma-dangle": "error"
+        "comma-dangle": "error",
+		"linebreak-style": ["error", "unix"]
     }
 }
