#48 Disable no-non-null-assertion for tests
This makes it easier to work with union types where properties can be undefined. Otherwise a lot of if conditions are required.

--- a/.eslintrc
+++ b/.eslintrc
@@ -22,5 +22,13 @@
         "comma-dangle": "error",
 		"linebreak-style": ["error", "unix"],
 		"object-curly-spacing": ["error", "never"]
-    }
+    },
+	"overrides": [
+		{
+			"files": ["*.spec.ts"],
+			"rules": {
+				"@typescript-eslint/no-non-null-assertion": "off"
+			}
+		}
+	]
 }
