--- a/.eslintrc
+++ b/.eslintrc
@@ -21,7 +21,8 @@
         "no-console": "error",
         "comma-dangle": "error",
 		"linebreak-style": ["error", "unix"],
-		"object-curly-spacing": ["error", "never"]
+		"object-curly-spacing": ["error", "never"],
+		"semi": "error"
     },
 	"overrides": [
 		{
