--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,8 @@
         "comma-dangle": "error",
 		"linebreak-style": ["error", "unix"],
 		"object-curly-spacing": ["error", "never"],
-		"semi": "error"
+		"@typescript-eslint/semi": ["error"],
+		"semi-spacing": ["error", {"before": false, "after": true}]
     },
 	"overrides": [
 		{
