#58 Set up a baseline CLI
Update rollup config to bundle the CLI
Update .env.example
Add CLI entrypoint

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,7 @@
+# production -> sdk will be generated in to the nearest node_modules directory
+# development -> sdk will be generated into ./sdk
+NODE_ENV=production
 
-# Path to the open-api v3 file
-# Specs: https://swagger.io/specification/
-SRC_OPENAPI=path/to/openapi.json
-
-# Output directories
-SDK_VERSION=1.0.0
-SDK_REPOSITORY=./sdk
-
-# Test-system credentials. These are used to test the sdk.
+# Test-system credentials. These are used to test the sdk
 TEST_DOMAIN=
 TEST_API_KEY=
