--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
     "description": "SDK generator based on a weclapp api swagger file",
     "main": "./src/index.ts",
     "author": "weclapp",
-    "private": true,
+    "files": [
+        "lib",
+        "bin"
+    ],
     "scripts": {
         "gen:start": "ts-node -r tsconfig-paths/register src/index.ts --project tsconfig.json",
         "gen:dev": "ts-node-dev --respawn --watch \"static/**/*\" -r tsconfig-paths/register src/index.ts",
@@ -15,30 +18,29 @@
         "lint:fix": "npm run lint -- --fix",
         "test": "jest",
         "test:coverage": "jest --coverage",
-        "test:dev": "jest --watch",
-        "import:swagger": "ts-node scripts/import-swagger.ts --project tsconfig.json"
+        "test:dev": "jest --watch"
     },
     "repository": {
         "type": "git",
         "url": "git@git.internal.weclapp.com:weclapp/weclapp-api/sdk-generator.git"
     },
     "devDependencies": {
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-replace": "^3.0.0",
         "@types/jest": "^27.0.2",
         "@types/node": "^16.10.2",
         "@types/node-fetch": "^2.5.12",
+        "@types/yargs": "^16.0.4",
         "@typescript-eslint/eslint-plugin": "^4.33.0",
         "@typescript-eslint/parser": "^4.33.0",
-        "rollup-plugin-ts": "^1.4.7",
         "cross-env": "^7.0.3",
         "eslint": "^7.32.0",
         "jest": "^27.2.4",
         "jest-extended": "^0.11.5",
         "joi": "^17.4.2",
-        "node-fetch": "^2.6.5",
         "openapi-types": "^9.3.0",
         "rollup": "^2.58.0",
-        "rollup-plugin-copy": "^3.4.0",
-        "rollup-plugin-terser": "^7.0.2",
+        "rollup-plugin-ts": "^1.4.7",
         "rxjs": "^7.3.1",
         "swagger2openapi": "^7.0.8",
         "ts-jest": "^27.0.5",
@@ -53,6 +55,8 @@
         "dotenv": "^10.0.0",
         "fs-extra": "^10.0.0",
         "indent-string": "^4.0.0",
-        "typescript": "^4.4.3"
+        "node-fetch": "^2.6.5",
+        "typescript": "^4.4.3",
+        "yargs": "^16.2.0"
     }
 }
