--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "joi": "^17.4.2",
         "openapi-types": "^9.3.0",
         "rollup": "^2.58.0",
+        "rollup-plugin-terser": "^7.0.2",
         "rollup-plugin-ts": "^1.4.7",
         "rxjs": "^7.3.1",
         "swagger2openapi": "^7.0.8",
