--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "resolveJsonModule": true,
         "moduleResolution": "node",
         "module": "commonjs",
-        "target": "ES2020",
+        "target": "ESNext",
         "sourceMap": false,
         "allowSyntheticDefaultImports": true,
         "baseUrl": ".",
@@ -26,7 +26,8 @@
     },
     "include": [
         "tests/**/*.ts",
+        "sdk/raw/*.ts",
         "src/**/*.ts",
-        "sdk/src/*.ts"
+        "raw/**/*.ts"
     ]
 }
