#60 Add flag to use env variables
Use env variables in CI

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,7 @@ NODE_ENV=production
 # Test-system credentials. These are used to test the sdk
 TEST_DOMAIN=
 TEST_API_KEY=
+
+# Optional credentials used by sdk:build
+WECLAPP_BACKEND_URL=
+WECLAPP_API_KEY=
