--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,9 +39,11 @@ generate:
       - sdk
   variables:
     NODE_ENV: development
+    WECLAPP_API_KEY: $TEST_API_KEY
+    WECLAPP_BACKEND_URL: $TEST_DOMAIN
   script: |
     npm run cli:build
-    ./bin/cli.js "$TEST_DOMAIN" --key "$TEST_API_KEY" --include-hidden
+    ./bin/cli.js --from-env
 
 test:
   extends: .npm:defaults
