#60 Prepend https protocol if missing

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,6 @@
 # development -> sdk will be generated into ./sdk
 NODE_ENV=production
 
-# Test-system credentials. These are used to test the sdk
-TEST_DOMAIN=
-TEST_API_KEY=
-
-# Optional credentials used by sdk:build
+# Test-system credentials. These are used to test the sdk (and possibly build)
 WECLAPP_BACKEND_URL=
 WECLAPP_API_KEY=
