#61 Set up basic caching
Update .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,13 @@
-.idea
-.env
-.test
-coverage
-node_modules
-sdk
-lib
-raw
-docs
-main
-rx
-utils
-node
+/.idea
+/.env
+/.test
+/coverage
+/node_modules
+/sdk
+/lib
+/raw
+/docs
+/main
+/rx
+/utils
+/node
