--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "scripts": {
         "cli:build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
         "cli:watch": "cross-env NODE_ENV=development rollup -c rollup.config.js --watch",
-        "sdk:build": "sdk-generator --from-env",
+        "sdk:build": "sdk-generator --from-env --include-hidden",
         "lint": "eslint {src,tests}/**/*.ts",
         "lint:fix": "npm run lint -- --fix",
         "test": "jest",
