--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
   "scripts": {
     "cli:build": "cross-env NODE_ENV=production rollup -c rollup.config.js",
     "cli:watch": "cross-env NODE_ENV=development rollup -c rollup.config.js --watch",
-    "sdk:build": "sdk-generator --from-env --include-hidden",
+    "sdk:build": "./bin/cli.js --from-env --include-hidden",
     "lint": "eslint {src,tests}/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
     "test": "jest",
     "test:coverage": "jest --coverage",
     "test:dev": "jest --watch",
     "postinstall": "npm run cli:build"
-    },
+  },
     "repository": {
         "type": "git",
         "url": "git@git.internal.weclapp.com:weclapp/weclapp-api/sdk-generator.git"
