--- a/package.json
+++ b/package.json
@@ -7,11 +7,11 @@
   "types": "./main/index.d.ts",
   "author": "weclapp",
   "bin": {
-    "sdk-generator": "bin/cli.js"
+    "sdk-generator": "./bin/cli.js"
   },
   "files": [
-    "lib",
     "bin",
+    "lib",
     "src",
     "static",
     "rollup.config.js",
@@ -32,43 +32,43 @@
     "test:dev": "jest --watch",
     "postinstall": "npm run cli:build"
   },
-    "repository": {
-        "type": "git",
-        "url": "git@git.internal.weclapp.com:weclapp/weclapp-api/sdk-generator.git"
-    },
-    "devDependencies": {
-        "@types/jest": "^27.0.2",
-        "@typescript-eslint/eslint-plugin": "^5.0.0",
-        "@typescript-eslint/parser": "^5.0.0",
-        "eslint": "^8.0.0",
-        "jest": "^27.2.5",
-        "jest-extended": "^1.0.0",
-        "joi": "^17.4.2",
-        "ts-jest": "^27.0.5",
-        "ts-node": "^10.3.0",
-        "ts-node-dev": "^1.1.8",
-        "tsconfig-paths": "^3.11.0"
-    },
-    "dependencies": {
-        "@types/node-fetch": "^2.5.12",
-        "@types/fs-extra": "^9.0.13",
-        "@types/yargs": "^17.0.3",
-        "@types/node": "^14.17.21",
-        "@rollup/plugin-json": "^4.1.0",
-        "cross-env": "^7.0.3",
-        "swagger2openapi": "^7.0.8",
-        "openapi-types": "^9.3.0",
-        "chalk": "^4.1.2",
-        "change-case": "^4.1.2",
-        "dotenv": "^10.0.0",
-        "rxjs": "^7.4.0",
-        "fs-extra": "^10.0.0",
-        "indent-string": "^4.0.0",
-        "node-fetch": "^2.6.5",
-        "rollup": "^2.58.0",
-        "rollup-plugin-terser": "^7.0.2",
-        "rollup-plugin-ts": "^1.4.7",
-        "typescript": "^4.4.3",
-        "yargs": "^17.2.1"
-    }
+  "repository": {
+    "type": "git",
+    "url": "git@git.internal.weclapp.com:weclapp/weclapp-api/sdk-generator.git"
+  },
+  "devDependencies": {
+    "@types/jest": "^27.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.0.0",
+    "@typescript-eslint/parser": "^5.0.0",
+    "eslint": "^8.0.0",
+    "jest": "^27.2.5",
+    "jest-extended": "^1.0.0",
+    "joi": "^17.4.2",
+    "ts-jest": "^27.0.5",
+    "ts-node": "^10.3.0",
+    "ts-node-dev": "^1.1.8",
+    "tsconfig-paths": "^3.11.0"
+  },
+  "dependencies": {
+    "@types/node-fetch": "^2.5.12",
+    "@types/fs-extra": "^9.0.13",
+    "@types/yargs": "^17.0.3",
+    "@types/node": "^14.17.21",
+    "@rollup/plugin-json": "^4.1.0",
+    "cross-env": "^7.0.3",
+    "swagger2openapi": "^7.0.8",
+    "openapi-types": "^9.3.0",
+    "chalk": "^4.1.2",
+    "change-case": "^4.1.2",
+    "dotenv": "^10.0.0",
+    "rxjs": "^7.4.0",
+    "fs-extra": "^10.0.0",
+    "indent-string": "^4.0.0",
+    "node-fetch": "^2.6.5",
+    "rollup": "^2.58.0",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-ts": "^1.4.7",
+    "typescript": "^4.4.3",
+    "yargs": "^17.2.1"
+  }
 }
