--- a/package.json
+++ b/package.json
@@ -48,30 +48,31 @@
     "jest": "^27.4.7",
     "jest-extended": "^2.0.0",
     "joi": "^17.6.0",
+    "rollup-plugin-string": "^3.0.0",
     "ts-jest": "^27.1.3",
     "ts-node": "^10.4.0",
     "ts-node-dev": "^1.1.8",
     "tsconfig-paths": "^3.12.0"
   },
   "dependencies": {
-    "@types/node-fetch": "^2.5.12",
-    "@types/fs-extra": "^9.0.13",
-    "@types/yargs": "^17.0.8",
-    "@types/node": "^16.11.22",
     "@rollup/plugin-json": "^4.1.0",
-    "cross-env": "^7.0.3",
-    "swagger2openapi": "^7.0.8",
-    "openapi-types": "^10.0.0",
+    "@types/fs-extra": "^9.0.13",
+    "@types/node": "^16.11.22",
+    "@types/node-fetch": "^2.5.12",
+    "@types/yargs": "^17.0.8",
     "chalk": "^4.1.2",
     "change-case": "^4.1.2",
+    "cross-env": "^7.0.3",
     "dotenv": "^15.0.0",
-    "rxjs": "^7.5.2",
     "fs-extra": "^10.0.0",
     "indent-string": "^4.0.0",
     "node-fetch": "^2.6.7",
+    "openapi-types": "^10.0.0",
     "rollup": "^2.66.1",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^2.0.5",
+    "rxjs": "^7.5.2",
+    "swagger2openapi": "^7.0.8",
     "typescript": "^4.5.5",
     "yargs": "^17.3.1"
   }
