#73 Generate SDK functions
Generate count function
Generate unique function
Generate update function
Generate create function
Generate delete function
Generate generic entity function
Generate service type and function map as well
Generate some function
Add suffix to internal interfaces to avoid conflicts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,7 @@
     },
     "include": [
         "tests/**/*.ts",
-        "src/**/*.ts"
+        "src/**/*.ts",
+        "src/**/*.txt"
     ]
 }
