--- a/package.json
+++ b/package.json
@@ -13,9 +13,6 @@
     "bin",
     "lib",
     "src",
-    "static",
-    "rollup.config.js",
-    "tsconfig.json",
     "tsconfig.lib.json"
   ],
   "publishConfig": {
@@ -31,9 +28,9 @@
     "sdk:build": "./bin/cli.js --from-env --include-hidden",
     "lint": "eslint {src,tests}/**/*.ts",
     "lint:fix": "npm run lint -- --fix",
-    "test": "jest",
-    "test:coverage": "jest --coverage",
-    "test:dev": "jest --watch",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "coverage": "vitest run --coverage",
     "postinstall": "npm run cli:build"
   },
   "repository": {
@@ -41,25 +38,18 @@
     "url": "git@git.internal.weclapp.com:weclapp/weclapp-api/sdk-generator.git"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.0",
-    "@typescript-eslint/eslint-plugin": "^5.10.2",
-    "@typescript-eslint/parser": "^5.10.2",
-    "eslint": "^8.8.0",
-    "jest": "^27.4.7",
-    "jest-extended": "^2.0.0",
-    "joi": "^17.6.0",
+    "@typescript-eslint/eslint-plugin": "^5.14.0",
+    "@typescript-eslint/parser": "^5.14.0",
+    "eslint": "^8.10.0",
     "rollup-plugin-string": "^3.0.0",
-    "ts-jest": "^27.1.3",
-    "ts-node": "^10.4.0",
-    "ts-node-dev": "^1.1.8",
-    "tsconfig-paths": "^3.12.0"
+    "vitest": "^0.6.0"
   },
   "dependencies": {
     "@rollup/plugin-json": "^4.1.0",
     "@types/fs-extra": "^9.0.13",
-    "@types/node": "^16.11.22",
-    "@types/node-fetch": "^2.5.12",
-    "@types/yargs": "^17.0.8",
+    "@types/node": "^16.11.26",
+    "@types/node-fetch": "^2.6.1",
+    "@types/yargs": "^17.0.9",
     "chalk": "^4.1.2",
     "change-case": "^4.1.2",
     "cross-env": "^7.0.3",
@@ -68,12 +58,12 @@
     "indent-string": "^4.0.0",
     "node-fetch": "^2.6.7",
     "openapi-types": "^10.0.0",
-    "rollup": "^2.66.1",
+    "rollup": "^2.70.0",
     "rollup-plugin-terser": "^7.0.2",
     "rollup-plugin-ts": "^2.0.5",
-    "rxjs": "^7.5.2",
+    "rxjs": "^7.5.5",
     "swagger2openapi": "^7.0.8",
-    "typescript": "^4.5.5",
+    "typescript": "^4.6.2",
     "yargs": "^17.3.1"
   }
 }
