#73 Rename domain to host to match openapi schema
Support both swagger and openapi files
Use exports in package.json

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,7 +39,7 @@ generate:
     NODE_ENV: development
   script:
     - chmod +x ./bin/cli.js
-    - ./bin/cli.js --from-env --include-hidden
+    - ./bin/cli.js tests/openapi.json
 
 publish:
   tags:
